FIX: focus --> focus-visibe and join :hover and :focus-visble css

--- a/webapp/IronCalc/src/components/RightDrawer/rightdrawer.css
+++ b/webapp/IronCalc/src/components/RightDrawer/rightdrawer.css
@@ -49,12 +49,7 @@
   transition: background-color 0.2s ease;
 }
 
-.ic-drawer-resize-handle:hover {
-  background-color: var(--palette-primary-main);
-  opacity: 0.5;
-}
-
-.ic-drawer-resize-handle:focus {
+.ic-drawer-resize-handle:is(:hover, :focus-visible) {
   background-color: var(--palette-primary-main);
   opacity: 0.5;
 }
